--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-db": "json-server --watch ./db/db.json --port 3004 --routes ./db/routes.json --nc"
+    "start-db": "json-server --watch ./db/db.json --port 3004 --routes ./db/routes.json --no-cors"
   },
   "eslintConfig": {
     "extends": [
